# image_pipeline

image_proc/: CMakeLists.txt
image_proc/include/image_proc/: debayer.hpp  rectify.hpp
image_proc/src/: debayer.cpp  rectify.cpp
stereo_image_proc/: CMakeLists.txt  package.xml
stereo_image_proc/include/stereo_image_proc/: disparity.hpp  point_cloud2.hpp  processor.hpp
stereo_image_proc/src/: disparity.cpp  point_cloud2.cpp  processor.cpp  stereo_image_proc.cpp
